fixed spinner alignment

--- a/frontend/src/components/Spinner/Spinner.scss
+++ b/frontend/src/components/Spinner/Spinner.scss
@@ -1,5 +1,5 @@
 .sk-folding-cube {
-    margin: auto;
+    margin: 200px auto;
     width: 40px;
     height: 40px;
     position: relative;
